Fix for a tooltip visibility issue. (#309)
Issue: KAAV-1076

--- a/src/components/common/Common.scss
+++ b/src/components/common/Common.scss
@@ -890,3 +890,7 @@ header{
   color: $color-black-60;
   margin-top: $size8;
 }
+
+.tooltip {
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, .5);
+}
